{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Map Creation",
            "id": "9b4be8d2-8a3e-4477-8d74-fa5cdd2626f1",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Value",
                    "id": "63db657e-1b29-48ae-b20e-0bb476ef9c5f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "dbfb4554-6442-4915-95d3-afc00fddc576",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandTool",
                    "type": "Button",
                    "id": "1ce6960f-d3d4-4f4d-99a4-349ea380cdd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HammerTool",
                    "type": "Button",
                    "id": "31876238-9da6-4678-b8bc-0f997af46e4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightingTool",
                    "type": "Button",
                    "id": "5e05288b-32ef-4273-90d8-0112b4cd60f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CopyTool",
                    "type": "Button",
                    "id": "a9968167-12b2-4aaf-817e-88ec50538d7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UndoTool",
                    "type": "Button",
                    "id": "1f90523f-5d5c-4858-b170-b4023b5f6e44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RedoTool",
                    "type": "Button",
                    "id": "38885339-c7e8-4277-bd59-865d8d5f83df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a6129780-1102-4ba9-ac36-5e09a6b475dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "62ee6d81-6c2f-4eb0-ad60-a183e6953e0d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aba52fff-a781-493f-a667-bef25c998b47",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f4610ec8-ec32-4302-9966-64fb10ea4b43",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53302e03-fe6a-492b-a01e-d6828d2978f2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseScroll",
                    "id": "2faedac7-ec3a-4d73-9127-b3913f7eacc6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5590dd7c-28ca-4df2-87fd-962069336791",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8b234504-3183-4287-99d2-1e438d8e90ab",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aec1ec7a-fea4-4c62-8fc9-accabdb032c1",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de4d0d58-c8d2-4910-88e3-0c4fb5979771",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HammerTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca281c3c-73b5-4d1e-9947-cd0492e1aa73",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightingTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4860fd0-c588-4975-b74f-d75e54ecd884",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CopyTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "12a7308b-94b8-4a76-8aa9-c4fe4e7ec919",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "04c0ff1e-bc8d-44fc-8af3-db32c94e00b1",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a24be4e4-7043-48f5-abcd-8212596d4091",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "97ba077c-634b-4914-9791-5cadabb8fdbc",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedoTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "fbf118c6-e89f-462c-b3c5-19aec74f3fa7",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedoTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "61b8fde6-49c6-4f45-9b28-74d6776db991",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedoTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}